kubernetes/gitea-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ofc-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ofc-app
  template:
    metadata:
      labels:
        app: ofc-app
    spec:
      containers:
        - name: gitea
          image: gitea/gitea:latest
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: gitea-data
              mountPath: /data
      volumes:
        - name: gitea-data
          persistentVolumeClaim:
            claimName: ofc-gitea-volume
