kubernetes/gitea-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: gitea-service
  namespace: default
spec:
  ports:
    - port: 3000
      protocol: TCP
  type: ClusterIP
  selector:
    app:  ofc-app
